2008-04-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* README: Fix autotools usage.

	* testsuite/test.sh, testsuite/check_coverity.erl,
	testsuite/Makefile.am: Build an index for code coverage reports.

	* doc/Makefile.am: Replace ISO-8859-1-encoded '©' by an HTML entity.

2008-04-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/Makefile.am: Update modules list. Replace erl -make by a small
	Erlang code snippet: if a module doesn't compile, the make process
	will abort.

	* src/Emakefile.in: Update modules list.

	* ebin/Makefile.am: Update modules list. Install examples in a
	separate directory (examples/ebin instead of ebin) to avoid namespace
	pollution.

	* doc/Makefile.am: Add the examples to the dependencies. Fix the
	sed(1) call; with BSD sed, the -i'' argument wasn't using a
	zero-length extension but the next argument as the backup extension.
	Fix the distributed files list.

	* src/network/exmpp_ssl.erl, src/network/exmpp_session.erl,
	src/examples/echo_client.erl: Fix warning with unused variables. Three
	warnings remain in exmpp_session but this requires more work.

	* src/examples/echo_client.erl: Fix a malformed documentation. Fix
	includes path.

	* configure.ac: Remove the EXMPP_CONFIGURE_ARGS variable because it's
	broken and unsued. Replace AC_PROG_CC with AC_PROG_CC_STDC and trust
	autoconf(1) by not saving CFLAGS before. Remove -Wall and -Werror from
	CFLAGS; they are both added later. Remove AC_HEADER_STDC and
	AC_HEADER_MAJOR which are obsolete now. With --enable-debug, we don't
	add -g because AC_PROG_CC_STDC already does it. Correctly use
	--enable-* for features (documentation and workarounds), instead of
	--with-*. Rewrite Erlang paths and applications detection to correctly
	handle $ERL and $ERLC. Renamed the 'broken-erl_ddll' feature to
	'erl_ddll-workaround'. Add a new 'http_base_64' detection feature,
	because this module was removed from Erlang starting with R12B-0.
